--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="https://vignette.wikia.nocookie.net/nekopara/images/c/c0/13.png/revision/latest?cb=20150528013116" height="250">
     <br>
     <h1>   Second day scratch project.</h1>
     <br>
