--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <br>
     <h1>   I am a proud Swedish-American!</h1>
     <br>
-    <h1>   and my Nieces!</h1>
+    <h1>   I am a gamer!</h1>
     <br>
     </a>
 	  </body>
