--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
     <h1>This is Jay's Home Page!</h1>
-    <img src="https://github.com/SverigeStronk/Jay-Shearer/blob/master/Image%20name4LaSol/4LaSol.png" height="500">
+    <img src="https://github.com/SverigeStronk/Jay-Shearer/tree/master/Image%20name4LaSol" height="500">
   </body>
 </html>
