--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <h1>This is all about me!</h1>
     <br>
     <h1>   I am a proud Swedish-American!</h1>
-	<img src="" height="500">
+	<img src="Dabber/Swede-Amerigo.jpg" height="500">
     <br>
     <h1>   I am a gamer!</h1>
     <br>
