--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <br>
     <h1>   I am a proud Swedish-American!</h1>
 	<img src="Dabber/Swede-Amerigo.jpg" height="500">
-    <br>
+    <br>I have both Swedish and American citizenship and I am very proud of my Swedish roots. 
     <h1>   I am a gamer!</h1>
     <br>
     </a>
