--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is all about me!</h1>
+    <h1>This is all about me!</h1><center>
     <br>
     <h1>   I am a proud Swedish-American!</h1>
 	<img src="Dabber/Swede-Amerigo.jpg" height="500">
