--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,8 @@
 	  <body bgcolor="#FFB3E6">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
-    <h1>This is all about me!</h1><center>
+    <a href="aboutme.html">About Me</a><center>
+    <h1>This is all about me!</h1>
     <br>
     <h1>   I am a proud Swedish-American!</h1>
 	<img src="Dabber/Swede-Amerigo.jpg" height="500">
