--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <br>
     <h1>   I am a proud Swedish-American!</h1>
 	<img src="Dabber/Swede-Amerigo.jpg" height="500">
-    <br>I have both Swedish and American citizenship and I am very proud of my Swedish roots. 
+    <br>I have both Swedish and American citizenship and I am very proud of my Swedish roots. Most of my family lives in Sweden. My Swedish family originates from the island of Gotland in the Baltic Sea.
     <h1>   I am a gamer!</h1>
     <br>
     </a>
