--- a/aboutme.html
+++ b/aboutme.html
@@ -14,13 +14,13 @@
 	<img src="Dabber/Swede-Amerigo.jpg" height="500">
     <br>I have both Swedish and American citizenship and I am very proud of my Swedish roots. Most of my family lives in Sweden. My Swedish family originates from the island of Gotland in the Baltic Sea.
     <h1>   I am a gamer!</h1>
-	<img src="Dabber/Eu4_logo.jpg" height="500">
+	<img src="Dabber/Eu4_logo.png" height="500">
     <br>
-	<img src="Dabber/Capture657.jpg" height="500">
+	<img src="Dabber/Capture657.png" height="500">
     <br>
-	<img src="Dabber/holdfast-logo.jpg" height="500">
+	<img src="Dabber/holdfast-logo.png" height="500">
     <br>
-	<img src="Dabber/Nekopara-logo.jpg" height="500">
+	<img src="Dabber/Nekopara-logo.png" height="500">
     <br>
     </a>
 	  </body>
