--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
     <h1>   I am a gamer!</h1>
 	<img src="Dabber/Eu4_logo.png" height="500">
     <br>
-	<img src="Dabber/Capture657.png" height="500">
+	<img src="Dabber/Capture657.PNG" height="500">
     <br>
 	<img src="Dabber/holdfast-logo.png" height="500">
     <br>
