--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body bgcolor="#DAF7A6">
     <a href="index.html">Home at Last</a>
     <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
+    <a href="aboutme.html">About Me</a><center>
     <h1>This is Jay's Home Page!</h1>
     <img src="Dabber/4LaSol.png" height="500">
   </body>
