--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>This is Jay's Home Page!</h1>
     <img src="Dabber/4LaSol.png" height="500">
     <iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=qQxQDQi_8b4">
+src="https://www.youtube.com/embed/v=qQxQDQi_8b4">
 </iframe>
   </body>
 </html>
