--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a><center>
     <h1>This is Jay's Home Page!</h1>
-    <img src="Dabber/4LaSol.png" height="500">
+    <img src="Dabber/4LaSol.png" height="500"><center>
     <iframe width="420" height="315"
 src="https://www.youtube.com/embed/qQxQDQi_8b4">
 </iframe>
