--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
-    <h1>This is my Portfolio Page!</h1>
+    <h1>This is my Portfolio Page!</h1><center>
     <img src="images/portfolio.jpg" height="250">
     <br>
     <h1>   Second day scratch project.</h1>
