--- a/aboutme.html
+++ b/aboutme.html
@@ -15,12 +15,15 @@
     <br>I have both Swedish and American citizenship and I am very proud of my Swedish roots. Most of my family lives in Sweden. My Swedish family originates from the island of Gotland in the Baltic Sea.
     <h1>   I am a gamer!</h1>
 	<img src="Dabber/Eu4_logo.png" height="500">
+    <h1>   EU4</h1>
     <br>I am a big fan of strategy games and my favorite of all time and it has also taught me a lot about history. 
 		  <center>
 	<img src="Dabber/Capture657.PNG" height="500">
+    <h1>   Crsuader Kings 3</h1>
     <br>One of my new favorite games is Crusader Kings 3, because it allows you to play as a kingdom during the viking age and wage wars against other kingdoms.
 		  <center>
 	<img src="Dabber/holdfast-logo.png" height="500">
+    <h1>   Holdfast</h1>
     <br>Holdfast is a game where you play as a soldier in the Napoleonic wars. 
 		  <center>
 	<img src="Dabber/Nekopara-logo.png" height="500">
