--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <img src="images/portfolio.jpg" height="250">
     <br>
     <h1>   The first project, The Wacky Triangle.</h1>
-    <img src="Comp Proj. 1/Comp#12.PNG" height="500">
+    <img src="Comp Proj. 1/Comp#12.png" height="500">
     <br>   We created a program that made objects move in a pattern infinitely.
 First we imported the turtle and math to begin. After that we created two empty lists for the sets of shape objects that we were going to use, those being “left_shapes” and “right_shapes”. Then we made lists for the shapes and colors of the objects that we used to initialize our objects. We then added the shapes into the picture, colorized them, and moved them into their starting positions, with the objects in “left_shapes” being facing the same direction and the objects in “right_shapes” facing another direction. The shapes then moved forward and we established a condition for what happens after the first collision. We then set up the first collision. After the shapes collided for the first time, they changed color and shape and moved in the opposite direction. We stored the original colors and shapes of the objects in variables so that we could revert them to their original conditions after the second collision. Because the objects followed a triangular path, they switched directions again and began to move toward each other after moving a predetermined distance after the first collision. When the objects collide for a second time, they go back to their original position repeat the same pattern in an infinite loop.
 
