--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@ First we imported the turtle and math to begin. After that we created two empty 
     <img   src="Projj/Turtgemar.PNG" height="500">		  
     <br>   We first import the turtle and the random module. After that is complete, we establish the screen’s background color and our pensive and pen color, along with the turtle shape and its initial size. We then establish what constitutes an apple in our game, making it a red circle. We also add in a color list. Then we move onto making the scoring system, starting it at 0 and establishing the score’s location on the screen in the upper right corner. Next, we set up a timer which runs for a total of 15 seconds and appears in the upper left corner. After we establish that, we create the process that enables the apple to randomly appear on the map after the collision with the turtle, as well as how much the turtle grows after eating it (0.2). Past that, we enable the turtle’s trail to change color and the game to end once the timer runs out. Finally, we established the arrow key movements that allow the turtle to be moved in the first place. 
 
-    <h1>   Interactive Fiction Rags to Riches.</h1>
-    <br>
+    <h1>   Liberating Willy.</h1>
+    <br>   src="mewmewcakei/Libwillypic.PNG" height="500">
     <h1>   Black Jack game written in Python.</h1>
     <br>
     <h1>   Modified bits in pictures.</h1>
