--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@ First we imported the turtle and math to begin. After that we created two empty 
 
     <h1>   Liberating Willy.</h1>
     <img   src="mewmewcakei/Libwillypic.PNG" height="500">
-    <h1>   Black Jack game written in Python.</h1>
-    <br>
+    <h1>   A scratch game that simulates a tour of New York.</h1>
+    <br>   https://scratch.mit.edu/projects/462158386
     <h1>   Modified bits in pictures.</h1>
     <br>
     <h1>   Use data files to create graphs.</h1>
