--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
     <br>I am a big fan of strategy games and my favorite of all time and it has also taught me a lot about history. 
 		  <center>
 	<img src="Dabber/Capture657.PNG" height="500">
-    <h1>   Crsuader Kings 3</h1>
+    <h1>   Crusader Kings 3</h1>
     <br>One of my new favorite games is Crusader Kings 3, because it allows you to play as a kingdom during the viking age and wage wars against other kingdoms.
 		  <center>
 	<img src="Dabber/holdfast-logo.png" height="500">
